--- a/.github/workflows/auto-create-build-check-issue.yml
+++ b/.github/workflows/auto-create-build-check-issue.yml
@@ -8,17 +8,19 @@ jobs:
   create-build-check-issue:
     timeout-minutes: 10
     runs-on: ubuntu-24.04
-    permissions: write-all
-    if: contains('["SlackBuildsOrg/slackbuilds"]', github.repository)
+    permissions:
+      issues: write
+    if: contains(fromJSON('["SlackBuildsOrg/slackbuilds"]'), github.repository)
     steps:
       - name: Check out repo
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
         with:
           show-progress: false
+          persist-credentials: false
 
-      - name: Create or update release issue
-        id: create-or-update-issue
-        uses: peter-evans/create-issue-from-file@e8ef132d6df98ed982188e460ebb3b5d4ef3a9cd # v5.0.1
+      - name: Create build check issue
+        id: create-issue
+        uses: peter-evans/create-issue-from-file@fca9117c27cdc29c6c4db3b86c48e4115a786710 # v6.0.0
         with:
           title: '${{ github.ref_name }}: Build check'
           content-filepath: .github/BUILD_CHECK_ISSUE.md
